--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
 	/* `otf-font-awesome` is required to be installed for icons */
-	font-family: FontAwesome, roboto, Helvetica, Arial, sans-serif;
+	font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 }
 
@@ -142,7 +142,8 @@ label:focus {
 #pulseaudio,
 #battery,
 #clock,
-#language {
+#language,
+#custom-poweroff {
   margin-left: 4px;
   border-bottom: 1px solid rgb(220, 220, 220);
   color: rgb(220, 220, 220);
