--- a/style.css
+++ b/style.css
@@ -136,10 +136,10 @@ label:focus {
 #custom-poweroff,
 #custom-mail {
   margin-left: 4px;
-  border-top: 1px solid rgb(100, 100, 100);
   color: rgb(220, 220, 220);
-  margin-bottom: 2px;
-  /* border-radius: 4px; */
+  margin-bottom: 6px;
+  border-radius: 4px;
+  background: rgb(30, 30, 50)
 }
 
 #custom-poweroff {
